# libdweller

./: .editorconfig  HACKING.md  README.md  meson.build
docs/: coff.h  dwarf_line_segment.ogf  dwarf_symbols.ogf  dwarf_types.ogf  line-number-information.md
dwarfdump/: dwarfdump.c  meson.build
examples/: 00_iterate_phdr.c  01_stacktrace.c  meson.build
include/dweller/: common.h  compiler.h  core.h  dwarf.h  elf.h  error.h  libc.h  macros.h  stream.h  symbols.h  symbols_ext.h  types.h  util.h
libwander/: README.md  meson.build
libwander/include/libwander/: config.h  wander.h  wander_printer.h
libwander/src/: wander.c  wander_internal.h  wander_platform.c  wander_platform.h  wander_printer.c  wander_resolver.c
src/: dwarf.c  dwarf_abbrev.c  dwarf_aranges.c  dwarf_compat.h  dwarf_cu.c  dwarf_die.c  dwarf_error.c  dwarf_error.h  dwarf_iter.c  dwarf_parser.c  dwarf_read.c  dwarf_stream.c  dwarf_symbols.c  dwarf_unit.c
tests/: 00_no_debug.asm  01_no_abbrev.asm  02_no_info.asm  03_empty_abbrev.asm  04_empty_info.asm  common.asm  hello.c  meson.build
tools/: bench.plot  bench.sh  calc_max_symbol_size.c
